<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextText1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/Letter1_1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/Letter1_2"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/Letter1_3"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/Letter1_4"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/Letter1_5"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>